8185273: Test8004741.java crashes with SIGSEGV in JDK10-hs nightly

Threads::parallel_java_threads_do() needs to call VMThread::claim_oops_do() to avoid causing a parallel GC to miss the VMThread.

Reviewed-by: shade, rkennke, kvn, gthornbr